--- a/TurnupNunitMay20.csproj
+++ b/TurnupNunitMay20.csproj
@@ -11,11 +11,13 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Tests\" />
     <Folder Include="Pages\" />
     <Folder Include="TestData\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 </Project>
